vbnc/vbnc/vbnc/tests/Errors/30225-1.vb
Option Explicit On
Option Explicit Off
